2000-06-07  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* Makefile.am, aux/GNUmakefile: fix maintainer rules to update
	config.* and texinfo.tex files.

	* amd/nfs_subr.c (nfsproc_getattr_2_svc): Don't conditionalize the
	mtime update of the symlinks on the SYMTTL option, but rather
	delay unmount of what was looked up using am_timeo_w.  Patch from
	Nick Williams <Nick.Williams@msdw.com>.  As Nick says "Basically:
	during unmount, increment the parent dir's mtime (fixes
	people doing amq -u). During stat, increase the TTL (to fix bad-luck
	timeouts), but leave the mtime alone."

	(nfsproc_lookup_2_svc, nfsproc_readlink_2_svc, unlink_or_rmdir,
	nfsproc_readdir_2_svc): correctly update d_drops stats for amq -s.
	Patch from Nick Williams <Nick.Williams@msdw.com>.

	* amd/map.c (unmount_mp): update mtime of amd symlink to further
	reduce the chances of race conditions between unmounting and
	looking up an entry again.  Patch from Nick Williams
	<Nick.Williams@msdw.com>.

	* README: updated instructions

	* bootstrap: remove log file before existing

2000-06-06  Erez Zadok  <ezk@aladdin.dev.hydraweb.com>

	* configure.in: no longer using aux/ subdir. don't force autoconf
	2.14. comment out (but leave explanation) everything that's needed
	for autoconf 2.14, so for now it works with autoconf-2.13, but the
	code is ready for 2.14 when it is released.  Similar changes to
	make code work with automake-1.4, until the next release comes
	out.

	* libamu/Makefile.am: include definitions that are required in
	automake 1.4, but won't be necessary when the next release of
	automake comes out (see XXX comments).

	* cache_check_dynamic.m4, check_checkmount_style.m4,
	check_mnttab_style.m4, check_mount_style.m4,
	check_network_transport_type.m4, check_nfs_prot_headers.m4,
	check_umount_style.m4: use symlink creation code that works for
	both autoconf 2.13 and 2.14 (when the latter comes out).

	* bootstrap: new script for maintainers to run to update autoconf,